# woofind

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.md  LICENSE  PERFORMANCE.md  README.md  README_CN.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
benches/: query_benchmark.rs
examples/: api_server.rs  basic_usage.rs  integration_with_woofmt.rs
src/: lib.rs  main.rs
src/api/: mod.rs
src/cache/: mod.rs
src/cli/: mod.rs
src/cli/commands/: clear.rs  index.rs  mod.rs  query.rs  serve.rs  stats.rs
src/index/: builder.rs  mod.rs  query.rs
src/parser/: mod.rs
