[package]
name = "woofind"
version = "0.1.0"
edition = "2021"
authors = ["Woofind Contributors"]
description = "Blazing-fast Go symbol search engine —— Vibe Coding toolchain"
license = "Apache-2.0"
repository = "https://github.com/GWinfinity/woofind"
readme = "README.md"
keywords = ["go", "golang", "import", "discovery", "fuzzy"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.75"

[[bin]]
name = "woofind"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Concurrent data structures - 零成本抽象
dashmap = { version = "6.1", features = ["rayon", "serde"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Memory mapping - 冷启动优化
memmap2 = "0.9"

# File system watching - 增量更新
notify = { version = "6.1", features = ["crossbeam-channel"] }

# Fuzzy matching
nucleo = "0.5"                    # 高性能模糊匹配引擎
simsearch = "0.2"                 # 备用轻量模糊搜索
fst = "0.4"                       # 有限状态转换器（前缀匹配）

# Go 模块解析 (使用内置解析器)
semver = "1.0"                    # 版本语义化

# Parsing
tree-sitter = "0.25"
tree-sitter-go = "0.25"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"                   # 二进制序列化（更快的缓存）

# Async runtime (for file watching and API)
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "signal"] }

# HTTP API
axum = { version = "0.7", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Output styling
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
walkdir = "2.5"
chrono = "0.4"
rayon = "1.10"
regex = "1.10"
indexmap = "2.2"
once_cell = "1.19"
hashbrown = "0.15"                # 更快的 HashMap
ahash = "0.8"                     # 更快的哈希算法
dirs = "5.0"

[[bench]]
name = "query_benchmark"
harness = false

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
